@@ -1,6 +1,9 @@
 # ChangeLog for app-text/agrep
-# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/agrep/ChangeLog,v 1.20 2007/02/09 22:15:07 grobian Exp $
+# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-text/agrep/ChangeLog,v 1.21 2009/04/13 02:29:06 darkside Exp $
+
+  13 Apr 2009; Jeremy Olexa <darkside@gentoo.org> agrep-2.04.ebuild:
+  QA: respect CC, bug 243714
 
   09 Feb 2007; Fabian Groffen <grobian@gentoo.org> agrep-2.04.ebuild:
   Dropped ppc-macos keyword, see you in prefix
